# Python

PwZN2024_Live-main/Lab1/: lab12.py  test.txt
PwZN2024_Live-main/Lab2/: lab2_bezklasy.py  lab2_klasa.py
PwZN2024_Live-main/Lab3/: laby3.py
PwZN2024_Live-main/Lab4/: laby4.py
PwZN2024_Live-main/Lab5/: laby5.py
PwZN2024_Live-main/Lab7/: laby7.py
PwZN2024_Live-main/Lab8/: lab8.ipynb
PwZN2024_Live-main/Lab9/: laby9.py  pyproject.toml
PwZN2024_Live-main/lab10/: laby10.py
